# NovaPulseManager

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  计划.md
backend/: MVP_README.md  README.md  __init__.py  conftest.py  test_mvp.py
backend/application/: errors.py
backend/core/: LoadTemplates.py  LogManager.py  NovaException.py  TaskBase.py  paths.py  task_result.py
backend/device_operation/: AdbClient.py  DeviceUtils.py  check_update.py
backend/domain/: __init__.py  action.py  app.py  run.py
backend/models/: CommonConfig.py  Config.py  DeviceConfig.py  Module.py  Plugin.py  PluginConfig.py  SchemaVersion.py  Template.py  Workflow.py  __init__.py  plugin_config_base.py
backend/static/: zoom_in.sh  zoom_out.sh
backend/tests/: test_action_factory.py  test_api_routes.py  test_application_services.py  test_database_convergence.py  test_device_workflow_websocket.py  test_mvp_script.py  test_order_plugin.py  test_order_plugin_simple.py  test_plugin_catalog.py  test_plugins.py  test_run_service.py  (+4 more)
database/: MIGRATION_README.md  db_session.py  migrate_module_to_device_plugin.py  migrate_plugin_config.py
docs/: NovaPulseManager_Codex_Refactor_Plan.md  api.md  architecture.md  bugfix-device-create-modal-input-focus.md  migration-guide.md  phase1-refactor-summary.md  phase3-fastapi-migration-summary.md  phase4-template-split-summary.md  phase5-core-optimization-summary.md  plugin-development.md  refactor-executive-summary.md  refactor-plan.md.done  refactor-progress-log.md  workflow-schema-v2.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
scripts/: generate_frontend_types.py
(+112 files in other folders)
