[project]
name = "NovaPulseManager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.4",
    "opencv_python==4.12.0.88",
    "peewee==3.17.9",
    "pyinstaller>=6.17.0",
    "rapidocr-onnxruntime>=1.4.4",
    "onnxruntime>=1.20.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "websockets>=10.4",
    "pydantic>=2.5.0",
    "pydantic>=1.0.0",
    "networkx>=3.0.0",
    "mtc",
    "msc",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
mtc = { git = "https://github.com/Einzieg/mtc-async" }
msc = { git = "https://github.com/Einzieg/msc-async" }

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.20.0",
]
